@@ -13,6 +13,13 @@ function SoundQueue()
 		}
 	}
 	
+	this.addIfEmpty = function(key)
+	{
+		console.log(this._queue.length);
+		if (this._queue.length == 0)
+			this.addSound(key);
+	}
+	
 	this.playNext = function()
 	{
 		if (this._queue.length == 0)
